--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="Adriano.example.todo">
    <application
-        android:label="todo"
+        android:label="Todo Listo"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
