--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter_launcher_icons: "^0.13.1"
   roundcheckbox: "^2.0.5"
   auto_size_text: "^3.0.0"
+  firebase_core: ^2.13.0
+  firebase_auth: ^4.6.1
 
 flutter_launcher_icons:
   android: true
