--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   auto_size_text: "^3.0.0"
   firebase_core: ^2.13.0
   firebase_auth: ^4.6.1
+  google_sign_in: ^6.1.2
 
 flutter_launcher_icons:
   android: true
