--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,20 +47,20 @@ dependencies:
 flutter_launcher_icons:
   android: true
   ios: true
-  image_path: "images/todo_pic.png"
+  image_path: "images/logo_todolisto.png"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "images/todo_pic.png"
-    background_color: "#0000"
-    theme_color: "#0000"
+    image_path: "images/logo_todolisto.png"
+    background_color: "#FFFFFF"
+    theme_color: "#FFFFFF"
   windows:
     generate: true
-    image_path: "images/todo_pic.png"
+    image_path: "images/logo_todolisto.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: "images/todo_pic.png"
+    image_path: "images/logo_todolisto.png"
 
 
   # The following adds the Cupertino Icons font to your application.
