--- a/web/manifest.json
+++ b/web/manifest.json
@@ -3,8 +3,8 @@
     "short_name": "todo",
     "start_url": ".",
     "display": "standalone",
-    "background_color": "#FFFFFF",
-    "theme_color": "#FFFFFF",
+    "background_color": "transparent",
+    "theme_color": "transparent",
     "description": "just a todo app",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
