--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_slidable: "^3.1.1"
-  flutter_launcher_icons: "^0.13.1"
+  flutter_launcher_icons: ^0.14.2
   roundcheckbox: "^2.0.5"
   auto_size_text: "^3.0.0"
   firebase_core: ^3.4.1
@@ -83,7 +83,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
