--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: TodoListo
+name: todo_listo
 description: just a todo app
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -45,6 +45,7 @@ dependencies:
   provider: ^6.1.5
   flutter_smart_dialog: ^4.9.8+8
   intl: ^0.20.2
+  flutter_colorpicker: ^1.0.3
 
 flutter_launcher_icons:
   android: true
