--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^3.10.0
   firebase_auth: ^5.4.0
   cloud_firestore: ^5.6.1
+  firebase_storage: ^12.3.1
   google_sign_in: ^6.2.2
   cupertino_icons: ^1.0.8
   circle_progress_bar: ^0.1.2
@@ -46,6 +47,7 @@ dependencies:
   flutter_smart_dialog: ^4.9.8+8
   intl: ^0.20.2
   flutter_colorpicker: ^1.0.3
+  image_picker: ^1.0.4
 
 flutter_launcher_icons:
   android: true
